# izmir

./: README.md
Analysis/: AirQuality.pbix
Apps/: pyproject.toml
Apps/GetAirQualityData/: gaqd.py
Data/: AirQuality.csv
GeoDATA/: IzmirBorders.qgz
GeoDATA/GeoJSON/: IzmirCounties.geojson  izmirborders.geojson
GeoDATA/KML/: IzmirCounties.kml
GeoDATA/Raster/: izmir_borders.tif  izmir_borders.tif.points  izmirbbborders.tif  izmirbbborders.tif.points
GeoDATA/Shapes/: IzmirBorders.shp  IzmirBorders.shx  IzmirCounties.dbf  IzmirCounties.shp  IzmirCounties.shx
GeoDATA/TopoJSON/: izmircounties.json
